package server

import (
	"context"
	"fmt"
	"net"
	"sync"
	"time"

	"github.com/libp2p/go-libp2p/core/peer"
	"google.golang.org/grpc"

	"github.com/AgentNetworkPlan/AgentNetwork/internal/p2p/node"
)

// NodeStatus èŠ‚ç‚¹çŠ¶æ€
type NodeStatus string

const (
	StatusOnline  NodeStatus = "online"
	StatusOffline NodeStatus = "offline"
	StatusBusy    NodeStatus = "busy"
)

// NodeEntry èŠ‚ç‚¹æ¡ç›®
type NodeEntry struct {
	NodeID       string
	PeerID       peer.ID
	Addresses    []string
	Status       NodeStatus
	Capabilities []string
	ConnectedAt  time.Time
	LastSeen     time.Time
}

// Server gRPC æœåŠ¡å™¨
type Server struct {
	UnimplementedToolNetworkServer

	node       *node.Node
	grpcServer *grpc.Server
	listenAddr string

	mu    sync.RWMutex
	nodes map[string]*NodeEntry
}

// NewServer åˆ›å»º gRPC æœåŠ¡å™¨
func NewServer(n *node.Node, listenAddr string) *Server {
	return &Server{
		node:       n,
		listenAddr: listenAddr,
		nodes:      make(map[string]*NodeEntry),
	}
}

// Start å¯åŠ¨ gRPC æœåŠ¡å™¨
func (s *Server) Start() error {
	lis, err := net.Listen("tcp", s.listenAddr)
	if err != nil {
		return fmt.Errorf("ç›‘å¬å¤±è´¥: %w", err)
	}

	s.grpcServer = grpc.NewServer()
	RegisterToolNetworkServer(s.grpcServer, s)

	fmt.Printf("ğŸŒ gRPC æœåŠ¡å¯åŠ¨: %s\n", s.listenAddr)

	go func() {
		if err := s.grpcServer.Serve(lis); err != nil {
			fmt.Printf("gRPC æœåŠ¡é”™è¯¯: %v\n", err)
		}
	}()

	return nil
}

// Stop åœæ­¢ gRPC æœåŠ¡å™¨
func (s *Server) Stop() {
	if s.grpcServer != nil {
		s.grpcServer.GracefulStop()
	}
}

// GetNodeList è·å–èŠ‚ç‚¹åˆ—è¡¨
func (s *Server) GetNodeList(ctx context.Context, filter *NodeFilter) (*NodeList, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	var nodes []*NodeInfo
	limit := int(filter.Limit)
	if limit <= 0 {
		limit = 100
	}

	// ä» P2P ç½‘ç»œè·å–è¿æ¥çš„èŠ‚ç‚¹
	connectedPeers := s.node.Host().Peers()

	for _, peerID := range connectedPeers {
		if len(nodes) >= limit {
			break
		}

		// åº”ç”¨è¿‡æ»¤å™¨
		if filter.Status != "" && filter.Status != string(StatusOnline) {
			continue
		}

		addrs := s.node.Host().Host().Peerstore().Addrs(peerID)
		addrStrs := make([]string, len(addrs))
		for i, addr := range addrs {
			addrStrs[i] = addr.String()
		}

		nodes = append(nodes, &NodeInfo{
			NodeId:      peerID.String(),
			PeerId:      peerID.String(),
			Addresses:   addrStrs,
			Status:      string(StatusOnline),
			ConnectedAt: time.Now().Unix(),
			LastSeen:    time.Now().Unix(),
		})
	}

	return &NodeList{
		Nodes: nodes,
		Total: int32(len(nodes)),
	}, nil
}

// GetNodeInfo è·å–èŠ‚ç‚¹ä¿¡æ¯
func (s *Server) GetNodeInfo(ctx context.Context, req *NodeInfoRequest) (*NodeInfoResponse, error) {
	peerID, err := peer.Decode(req.NodeId)
	if err != nil {
		return &NodeInfoResponse{Found: false}, nil
	}

	// æ£€æŸ¥æ˜¯å¦å·²è¿æ¥
	conns := s.node.Host().Host().Network().ConnsToPeer(peerID)
	if len(conns) == 0 {
		return &NodeInfoResponse{Found: false}, nil
	}

	addrs := s.node.Host().Host().Peerstore().Addrs(peerID)
	addrStrs := make([]string, len(addrs))
	for i, addr := range addrs {
		addrStrs[i] = addr.String()
	}

	return &NodeInfoResponse{
		Found: true,
		Node: &NodeInfo{
			NodeId:    peerID.String(),
			PeerId:    peerID.String(),
			Addresses: addrStrs,
			Status:    string(StatusOnline),
			LastSeen:  time.Now().Unix(),
		},
	}, nil
}

// SendTask å‘é€ä»»åŠ¡
func (s *Server) SendTask(ctx context.Context, req *TaskRequest) (*TaskResponse, error) {
	startTime := time.Now()

	// TODO: å®ç°ä»»åŠ¡åˆ†å‘é€»è¾‘
	// 1. é€‰æ‹©ç›®æ ‡èŠ‚ç‚¹
	// 2. é€šè¿‡ libp2p stream å‘é€ä»»åŠ¡
	// 3. ç­‰å¾…ç»“æœ

	return &TaskResponse{
		TaskId:     req.TaskId,
		Success:    true,
		Result:     []byte("Task received"),
		ExecutedBy: s.node.ID(),
		DurationMs: time.Since(startTime).Milliseconds(),
	}, nil
}

// StoreData å­˜å‚¨æ•°æ®
func (s *Server) StoreData(ctx context.Context, req *DataRequest) (*StoreResponse, error) {
	// TODO: ä½¿ç”¨ DHT å­˜å‚¨æ•°æ®
	// ç›®å‰è¿”å›æˆåŠŸä½œä¸ºå ä½

	return &StoreResponse{
		Success: true,
		Key:     req.Key,
	}, nil
}

// FetchData è·å–æ•°æ®
func (s *Server) FetchData(ctx context.Context, req *FetchRequest) (*FetchResponse, error) {
	// TODO: ä» DHT è·å–æ•°æ®

	return &FetchResponse{
		Found: false,
		Error: "æ•°æ®æœªæ‰¾åˆ°",
	}, nil
}

// Heartbeat å¿ƒè·³
func (s *Server) Heartbeat(ctx context.Context, req *HeartbeatRequest) (*HeartbeatResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	// æ›´æ–°èŠ‚ç‚¹ä¿¡æ¯
	entry, exists := s.nodes[req.NodeId]
	if !exists {
		entry = &NodeEntry{
			NodeID:      req.NodeId,
			ConnectedAt: time.Now(),
		}
		s.nodes[req.NodeId] = entry
	}

	entry.Status = NodeStatus(req.Status)
	entry.Capabilities = req.Capabilities
	entry.LastSeen = time.Now()

	return &HeartbeatResponse{
		Success:    true,
		ServerTime: time.Now().Unix(),
	}, nil
}
